# ColorTetris

./: CMakeLists.txt  main.cpp
src/: Board.h  ColorTetris.cpp  ColorTetris.h  Figure.h  GameController.cpp  GameController.h  Render.cpp  Render.h
src/Engine/: Board.h  ColorTetris.cpp  ColorTetris.h  Figure.h
src/GameBot/: AGameBot.hpp  BruteForceBot.cpp  BruteForceBot.hpp  GameBot.cpp  GameBot.hpp  RandomBot.cpp  RandomBot.hpp
src/rll/: BorderDrafter.hpp  Color.hpp  ColorSet.hpp  ConnectedRegionSearcher.hpp  NeighborhoodSearcher.hpp  TArea.hpp  TPoint.hpp
